Changes in mockup applied

--- a/aikido.html
+++ b/aikido.html
@@ -91,15 +91,48 @@
         </div>
     </header>
     <main>
+        <div class="main_banner">
+            <div class="slider">
+                <img src="https://via.placeholder.com/1600x1080/a9a9a9/000000" alt="Imagen 1">
+                <div style="
+                position: absolute;
+                display: flex;
+                height: 100%;
+                width: 100%;
+                justify-content: space-between;
+                padding: 5em;
+                color: #000;
+                box-sizing: border-box;">
+                    <div style="width: 50%;">
+                        <div>
+                            <h1 style="
+                            margin: 0;
+                            font-size: 5em;
+                        ">AIKIDO</h1>
+                            <h3 style="
+                            margin: 0;
+                            font-size: 2em;
+                        ">El arte de la paz</h3>
+                        </div>
+                        <div style="
+                        height: fit-content;
+                    ">
+                            <h4>Descubre en el Aikido una disciplina que va más allá de la autodefensa física, enseñándote a utilizar la energía y el movimiento como herramientas para resolver conflictos y promover la colaboración</h4>
+                        </div>
+                    </div>
+                    <img src="./assets/img/aikido.svg" width="100" height="auto" alt="Imagen 1" style="
+                    height: 100%;
+                    width: auto;
+                    padding: 4em 0;
+                    box-sizing: border-box;">
+                </div>
+            </div>
+        </div>
         <article>
-            <h2>Censo Electoral</h2>
-            <h3>Información referente al censo 2020-2024</h3>
-            <ul>
-                <li><a target="_blank" href="#">Calendario Electoral 2020-2024</a></li>
-                <li><a target="_blank" href="#">Papeletas 2020-2024</a></li>
-                <li><a target="_blank" href="#">Reglamento Electoral 2020-2024</a></li>
-                <li><a target="_blank" href="#">Modificació Calendari Electoral 2020-2024</a></li>
-            </ul>
+            <h3>Acerca del Aikido</h3>
+            <p>El Aikido es un arte marcial moderno fundado por el fundador Morihei Ueshiba (1883-1969), que estudió los secretos de las artes marciales tradicionales japonesas y luego pasó a establecer una disciplina espiritual más rigurosa. El aikido no compite innecesariamente con los oponentes en términos de fuerza o debilidad. El objetivo es entrenarse mutuamente en una rivalidad amistosa y desarrollar el cuerpo y la mente mediante técnicas nacidas del trabajo corporal y el poder respiratorio del irimi y el desplazamiento. El aikido no compite con otros por superioridad o inferioridad, por lo que no hay combates ni competiciones. El aikido es un arte marcial en el que los alumnos aprenden a respetarse mutuamente y aprenden el espíritu de la armonía a través de la práctica repetida.</p>
+            <h3 style="margin-top: 3em;">Características del Aikido</h3>
+            <p>El entrenamiento de Aikido tiene como objetivo promover el entrenamiento físico y mental, de acuerdo con el nivel de competencia de cada habilidad y la práctica repetida para que cualquiera pueda practicar. El entrenamiento de Aikido no sólo es bueno para la salud, sino que también desarrolla la confianza en uno mismo de forma natural para la vida diaria. El dojo es un lugar ideal para profundizar en la comprensión del ojo humano, para conocer gente independientemente de su edad, sexo y ocupación.</p>
         </article>
     </main>
     <footer>
