--- a/antidopaje.html
+++ b/antidopaje.html
@@ -92,14 +92,9 @@
     </header>
     <main>
         <article>
-            <h2>Censo Electoral</h2>
-            <h3>Información referente al censo 2020-2024</h3>
-            <ul>
-                <li><a target="_blank" href="#">Calendario Electoral 2020-2024</a></li>
-                <li><a target="_blank" href="#">Papeletas 2020-2024</a></li>
-                <li><a target="_blank" href="#">Reglamento Electoral 2020-2024</a></li>
-                <li><a target="_blank" href="#">Modificació Calendari Electoral 2020-2024</a></li>
-            </ul>
+            <h2>Antidopaje</h2>
+            <p>En esta sección se recoge una selección de las principales legislaciones que rigen en materia de prevención de dopaje y protección de la salud a nivel nacional (normativa básica, en materia de control de dopaje, sancionadora, de precios públicos del Laboratorio de Control del Dopaje y otra normativa) e internacional.</p>
+            <p><a target="_blank" href="https://celad.culturaydeporte.gob.es"><img width="100%" height="auto" src="https://celad.culturaydeporte.gob.es/.imaging/mte/micrositios-theme/cabecera-fondoCabecera/dam/micrositios/aepsad/admin/banner-home-web-celad/jcr:content/banner-home-web-celad.jpg" /></a></p>
         </article>
     </main>
     <footer>
