--- a/visor-pdf.html
+++ b/visor-pdf.html
@@ -92,14 +92,8 @@
     </header>
     <main>
         <article>
-            <h2>Censo Electoral</h2>
-            <h3>Información referente al censo 2020-2024</h3>
-            <ul>
-                <li><a target="_blank" href="#">Calendario Electoral 2020-2024</a></li>
-                <li><a target="_blank" href="#">Papeletas 2020-2024</a></li>
-                <li><a target="_blank" href="#">Reglamento Electoral 2020-2024</a></li>
-                <li><a target="_blank" href="#">Modificació Calendari Electoral 2020-2024</a></li>
-            </ul>
+            <h2>Ley de Transparencia</h2>
+            <embed src="https://www.rfejudo.com/documentos/convocatorias/Teplice-Cadet-European-Cup-2023.pdf" width="100%" height="1200" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
         </article>
     </main>
     <footer>
