--- a/antidopaje.html
+++ b/antidopaje.html
@@ -91,11 +91,11 @@
         </div>
     </header>
     <main>
-        <article>
+        <section>
             <h2>Antidopaje</h2>
             <p>En esta sección se recoge una selección de las principales legislaciones que rigen en materia de prevención de dopaje y protección de la salud a nivel nacional (normativa básica, en materia de control de dopaje, sancionadora, de precios públicos del Laboratorio de Control del Dopaje y otra normativa) e internacional.</p>
             <p><a target="_blank" href="https://celad.culturaydeporte.gob.es"><img width="100%" height="auto" src="https://celad.culturaydeporte.gob.es/.imaging/mte/micrositios-theme/cabecera-fondoCabecera/dam/micrositios/aepsad/admin/banner-home-web-celad/jcr:content/banner-home-web-celad.jpg" /></a></p>
-        </article>
+        </section>
     </main>
     <footer>
         <div class="columns">
