--- a/censo-electoral.html
+++ b/censo-electoral.html
@@ -91,7 +91,7 @@
         </div>
     </header>
     <main>
-        <article>
+        <section>
             <h2>Censo Electoral</h2>
             <h3>Información referente al censo 2020-2024</h3>
             <ul>
@@ -100,7 +100,7 @@
                 <li><a target="_blank" href="#">Reglamento Electoral 2020-2024</a></li>
                 <li><a target="_blank" href="#">Modificació Calendari Electoral 2020-2024</a></li>
             </ul>
-        </article>
+        </section>
     </main>
     <footer>
         <div class="columns">
