--- a/visor-pdf.html
+++ b/visor-pdf.html
@@ -91,10 +91,10 @@
         </div>
     </header>
     <main>
-        <article>
+        <section>
             <h2>Ley de Transparencia</h2>
             <embed src="https://www.rfejudo.com/documentos/convocatorias/Teplice-Cadet-European-Cup-2023.pdf" width="100%" height="1200" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
-        </article>
+        </section>
     </main>
     <footer>
         <div class="columns">
