--- a/locator.html
+++ b/locator.html
@@ -8,8 +8,122 @@
     <title>Federació Balear de Judo i EE. AA.</title>
     <link rel="icon" type="image/x-icon" href="./assets/img/Logo_fede-150x150.png">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="">
+    <style>
+        ul.arts_selector > li > a {
+            text-decoration: none;
+        }
+        ul.arts_selector {
+            display: flex;
+            margin: 0;
+            padding: 1em 5em;
+            justify-content: space-between;
+            gap: 2em;
+            text-transform: uppercase;
+            font-size: 13px;
+            border-bottom: 1px solid rgb(104 104 104);
+        }
+        #map {
+            z-index: 0;
+        }
+        .searcher {
+            height: 4em;
+            display: flex;
+            gap: 2em;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1em 5em;
+        }
+
+        .searcher input[type="text"]:focus {
+            outline: none;
+        }
+
+        .searcher input[type="text"] {
+            width: 60%;
+            height: 2em;
+            text-transform: uppercase;
+            border: none;
+            border-bottom: 1px solid rgb(104 104 104);
+        }
+
+        .localise {
+            border: 1px solid rgb(104 104 104);
+            height: 2em;
+            display: flex;
+            align-items: center;
+            padding: 0 0.5em;
+        }
+
+        .locator_results_searcher {
+            display: flex;
+            flex-wrap: wrap;
+            padding: 1em 5em;
+            justify-content: space-between;
+            gap: 1em;
+        }
+
+        .dojo_card {
+            width: 48%;
+            border: 1px solid rgb(104 104 104);
+            position: relative;
+            display: flex;
+        }
+
+        span.art_type {
+            position: absolute;
+            right: 0;
+            font-size: 11px;
+        }
+
+        .dojo_logo {
+            box-sizing: border-box;
+            width: 7.5em;
+            padding: 1em;
+            display: flex;
+            align-items: center;
+        }
+
+        .dojo_logo > img {
+            width: 100%;
+            height: auto;
+        }
+
+        .dojo_desc {
+            display: flex;
+            flex-direction: column;
+            padding: 1em 1em 1em 0;
+        }
+
+        span.art_type {
+            padding: 0.25em;
+        }
+
+        span.dojo_title {
+            font-weight: bold;
+            font-size: 15px;
+        }
+
+        span.dojo_address {
+            font-size: 13px;
+        }
+
+        element.style {
+            display: flex;
+            padding: 0.5em 0;
+            gap: 0.5em;
+        }
+
+        .locator_dojo_contact_buttons {
+            display: flex;
+            padding: 0.5em 0;
+            gap: 0.5em;
+        }
+
+        .locator_dojo_contact_buttons > img.icon {
+            width: 1.5em;
+        }
+    </style>
 </head>
 
 <body>
@@ -103,7 +217,8 @@
     <main>
         <div style="width: 100%; height: 90vh; display: flex;">
             <div style="width: 50%; height: 100%;">
-                <ul>
+                <ul class="arts_selector">
+                    <li><a href="#">Todas</a></li>
                     <li><a href="#">Judo</a></li>
                     <li><a href="#">Aikido</a></li>
                     <li><a href="#">Kendo</a></li>
@@ -111,6 +226,72 @@
                     <li><a href="#">Wushu</a></li>
                     <li><a href="#">Jiu Jitsu</a></li>
                 </ul>
+                <div class="searcher">
+                    <input type="text" placeholder="Buscar...">
+                    <span class="localise">Usar mi ubicación</span>
+                </div>
+                <div class="locator_results_searcher">
+                    <div class="dojo_card">
+                        <span class="art_type">AIKIDO</span>
+                        <div class="dojo_logo">
+                            <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                        </div>
+                        <div class="dojo_desc">
+                            <span class="dojo_title">Centro Aikido Takemusu</span>
+                            <span class="dojo_address">Carrer Quarter General Luque, 07300, Inca</span>
+                            <div class="locator_dojo_contact_buttons">
+                                <img class="icon" alt="Website" src="./assets/icons/internet.svg">
+                                <img class="icon" alt="Phone" src="./assets/icons/call.svg">
+                                <img class="icon" alt="Email" src="./assets/icons/email.svg">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dojo_card">
+                        <span class="art_type">AIKIDO</span>
+                        <div class="dojo_logo">
+                            <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                        </div>
+                        <div class="dojo_desc">
+                            <span class="dojo_title">Centro Aikido Takemusu</span>
+                            <span class="dojo_address">Carrer Quarter General Luque, 07300, Inca</span>
+                            <div class="locator_dojo_contact_buttons">
+                                <img class="icon" alt="Website" src="./assets/icons/internet.svg">
+                                <img class="icon" alt="Phone" src="./assets/icons/call.svg">
+                                <img class="icon" alt="Email" src="./assets/icons/email.svg">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dojo_card">
+                        <span class="art_type">AIKIDO</span>
+                        <div class="dojo_logo">
+                            <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                        </div>
+                        <div class="dojo_desc">
+                            <span class="dojo_title">Centro Aikido Takemusu</span>
+                            <span class="dojo_address">Carrer Quarter General Luque, 07300, Inca</span>
+                            <div class="locator_dojo_contact_buttons">
+                                <img class="icon" alt="Website" src="./assets/icons/internet.svg">
+                                <img class="icon" alt="Phone" src="./assets/icons/call.svg">
+                                <img class="icon" alt="Email" src="./assets/icons/email.svg">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dojo_card">
+                        <span class="art_type">AIKIDO</span>
+                        <div class="dojo_logo">
+                            <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                        </div>
+                        <div class="dojo_desc">
+                            <span class="dojo_title">Centro Aikido Takemusu</span>
+                            <span class="dojo_address">Carrer Quarter General Luque, 07300, Inca</span>
+                            <div class="locator_dojo_contact_buttons">
+                                <img class="icon" alt="Website" src="./assets/icons/internet.svg">
+                                <img class="icon" alt="Phone" src="./assets/icons/call.svg">
+                                <img class="icon" alt="Email" src="./assets/icons/email.svg">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div style="width: 50%; height: 100%;" id="map"></div>
         </div>
@@ -173,16 +354,21 @@
             <div class="column">
                 <div class="footer_column_body">
                     <ul>
-                        <li><img class="icon" src="./assets/icons/telephone.svg"><a href="tel:+34971461109">(+34) 971
-                                461 109</a></li>
-                        <li><img class="icon" src="./assets/icons/email-433830.svg"><a
-                                href="mailto:secretariageneralfbjudo@gmail.com">secretariageneralfbjudo@gmail.com</a>
+                        <li><img class="icon" src="./assets/icons/call.svg">
+                            <a href="tel:+34971461109">(+34) 971 461 109</a>
                         </li>
                         <li>
-                            <img class="icon" src="./assets/icons/location-433840.svg">
+                            <img class="icon" src="./assets/icons/email.svg">
+                            <a href="mailto:secretariageneralfbjudo@gmailcom">
+                                secretariageneralfbjudo@gmailcom
+                            </a>
+                        </li>
+                        <li>
+                            <img class="icon" src="./assets/icons/location.svg">
                             <div class="address">
-                                <a target="_blank" href="https://goo.gl/maps/HZSjBhcYcpSUTfj29">Avinguda Uruguay, S/N,
-                                    07010, Palma</a>
+                                <a target="_blank" href="https://goo.gl/maps/HZSjBhcYcpSUTfj29">
+                                    Avinguda Uruguay, S/N, 07010, Palma
+                                </a>
                                 <span>Lunes-Viernes de 9:00 a 14:00</span>
                             </div>
                         </li>
