Font Styles changed

--- a/aikido.html
+++ b/aikido.html
@@ -8,6 +8,10 @@
     <link rel="icon" type="image/x-icon" href="./assets/img/Logo_fede-150x150.png">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:wght@100;400&display=swap');
+    </style>
+    <style>
         .content_with_image {
             display: flex;
             gap: 5em;
@@ -88,6 +92,7 @@
         .slider_content_text h1 {
             margin: 0;
             font-size: 5em;
+            font-family: 'Permanent Marker', cursive;
         }
 
         .slider_content_text h3 {
@@ -189,7 +194,7 @@
                 <div class="slider_content">
                     <div class="slider_content_text">
                         <div>
-                            <h1>AIKIDO</h1>
+                            <h1>Aikido</h1>
                             <h3>El arte de la paz</h3>
                         </div>
                         <div class="slider_content_text_description">
